--- a/Views/LanguageSelectionWindow.xaml
+++ b/Views/LanguageSelectionWindow.xaml
@@ -1,21 +1,64 @@
-﻿<Window  xmlns:windows="clr-namespace:System.Windows;assembly=PresentationFramework"
-        x:Class="ResourceMaker.LanguageSelectionWindow"
+﻿<Window x:Class="ResourceMaker.UI.LanguageSelectionWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ResourceMaker"
+        xmlns:local="clr-namespace:ResourceMaker.UI"
         mc:Ignorable="d"
         Title="LanguageSelectionWindow" Height="450" Width="800">
     <Grid>
         <StackPanel Margin="20">
-            <TextBlock Text="使用したい言語を選択してください" FontSize="14" Margin="0,0,0,10"/>
-            <CheckBox Content="ja-JP（日本語）"/>
-            <CheckBox Content="en-US（英語）"/>
-            <CheckBox Content="fr-FR（フランス語）"/>
-            <TextBlock Text="追加したい言語コード"/>
-            <TextBox Name="CustomLanguageBox" Width="150"/>
-            <Button Content="選択確定" Margin="0,10,0,0" Click="ConfirmLanguage_Click"/>
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Text="使用したい言語を選択してください" FontSize="14" Margin="0,0,20,10"/>
+                <Button 
+                    Content="Create"
+                    VerticalAlignment="Center"
+                    Click="MakeFolders_Click" Margin="0,0,20,10"/>
+                <Button 
+                    Content="Cancel"
+                    VerticalAlignment="Center"
+                    Click="MakeFoldersCancel_Click" Margin="0,0,20,10"/>
+            </StackPanel>
+            <ItemsControl ItemsSource="{Binding LanguageOptions}">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <CheckBox Content="{Binding DisplayName}" IsChecked="{Binding IsSelected, Mode=TwoWay}" />
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+            <StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="追加言語コード（例: it-IT）"/>
+                    <TextBox Text="{Binding NewLanguageInput}" Width="150"/>
+                    <Button Content="Add" Command="{Binding AddNewLanguageCommand}" Margin="5,0,0,0" />
+                </StackPanel>
+                <Separator Margin="5" Height="2" Background="Gray" />
+                <ItemsControl ItemsSource="{Binding CustomLanguages}">
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="Auto" />
+                                </Grid.ColumnDefinitions>
+
+                                <StackPanel Orientation="Horizontal" Grid.Column="0">
+                                <TextBox 
+                                     Text="{Binding Code, Mode=TwoWay}"
+                                     Width="150"
+                                     Margin="0,0,5,0"/>
+
+                                <Button 
+                                    Content="X"
+                                    Width="25" Height="25"
+                                    VerticalAlignment="Center"
+                                    Click="DeleteItem_Click"/>
+                                </StackPanel>
+                            </Grid>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+            </StackPanel>
         </StackPanel>
     </Grid>
 </Window>
