--- a/Views/ResourceEditWindow.xaml
+++ b/Views/ResourceEditWindow.xaml
@@ -16,14 +16,31 @@
                     VerticalScrollBarVisibility="Auto"/>
                 
             </StackPanel>
-            <StackPanel Orientation="Horizontal">
+            <StackPanel Orientation="Horizontal" Focusable="False">
                 <TextBlock Text="リソース名を入力" VerticalAlignment="Center" Margin="0,5,0,5"/>
-                <TextBox Name="ResourceKeyBox" Width="200" Margin="5,15,0,15"/>
+                <TextBox x:Name="ResourceKeyBox"
+                    Width="200"
+                    Margin="5"
+                    VerticalAlignment="Center"
+                    Padding="0,0,25,0"
+                    KeyDown="TextBox_KeyDown" />
+
+                <Button x:Name="ClearButton"
+                    Content="🗑"
+                    Width="30"
+                    Height="25"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Center"
+                    Margin="0,0,10,0"
+                    ToolTip="クリア"
+                    Focusable="False"
+                    Click="ResourceClearButton_Click"/>
+
             </StackPanel>
-            <ItemsControl ItemsSource="{Binding LanguageEntries}">
+            <ItemsControl ItemsSource="{Binding LanguageEntries}" Focusable="False">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
-                        <StackPanel Orientation="Horizontal" Margin="0,5,0,5">
+                        <StackPanel Orientation="Horizontal" Margin="0,5,0,5" >
                             <TextBlock Text="{Binding Code }"
                                 VerticalAlignment="Center"
                                 Width="50"
@@ -33,7 +50,14 @@
                                 Margin="5,0,0,0"
                                 VerticalAlignment="Center"
                                 Padding="0"
+                                KeyDown="TextBox_KeyDown"
                                 Text="{Binding Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            <Button Content="🗑"
+                                Margin="5,0,0,0"
+                                Width="30"
+                                Height="25"
+                                Command="{Binding DataContext.ClearCommand, RelativeSource={RelativeSource AncestorType=ItemsControl}}"
+                                CommandParameter="{Binding}" />
                         </StackPanel>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
