--- a/Views/ResourceEditWindow.xaml
+++ b/Views/ResourceEditWindow.xaml
@@ -23,6 +23,10 @@
 
 
             </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Text="元テキスト" VerticalAlignment="Center" Margin="0,5,0,5"/>
+                <ComboBox Name="BaseTexts" VerticalAlignment="Center" Margin="0,5,0,5" Width="200"/>
+            </StackPanel>
             <StackPanel Orientation="Horizontal" Focusable="False">
                 <TextBlock Text="リソース名を入力" VerticalAlignment="Center" Margin="0,5,0,5"/>
                 <TextBox x:Name="ResourceKeyBox"
@@ -30,6 +34,7 @@
                     Margin="5"
                     VerticalAlignment="Center"
                     Padding="0,0,25,0"
+                    GotFocus="TextBox_GotFocus"
                     LostFocus="ResourceKeyBox_LostFocus"
                     KeyDown="TextBox_KeyDown" />
 
@@ -50,7 +55,9 @@
                 <TextBox x:Name="ResourceGetterBox"
                     Width="200"
                     Margin="5"
-                    Focusable="False"
+                    IsTabStop="False"
+                    GotFocus="TextBox_GotFocus"
+                    LostFocus="ResourceGetterBox_LostFocus"
                     VerticalAlignment="Center"
                     Padding="0,0,25,0"
                     KeyDown="TextBox_KeyDown" />
@@ -81,6 +88,7 @@
                                 Margin="5,0,0,0"
                                 Width="30"
                                 Height="25"
+                                Focusable="False"
                                 Command="{Binding DataContext.ClearCommand, RelativeSource={RelativeSource AncestorType=ItemsControl}}"
                                 CommandParameter="{Binding}" />
                         </StackPanel>
