--- a/ResourceMaker.UI/ResourceEditWindow.xaml
+++ b/ResourceMaker.UI/ResourceEditWindow.xaml
@@ -9,7 +9,7 @@
     <Grid>
         <StackPanel Margin="20">
             <StackPanel Orientation="Vertical">
-                <TextBlock Text="対象テキスト" FontSize="14"/>
+                <TextBlock x:Name="TargetText" Text="対象テキスト" FontSize="14"/>
                 <TextBox x:Uid="SelectedText" x:Name="SelectedText" FontSize="14"
                     IsReadOnly="True" 
                     Margin="0,0,5,0"
