--- a/Views/ResourceEditWindow.xaml
+++ b/Views/ResourceEditWindow.xaml
@@ -66,7 +66,8 @@
                     Content="取得式"
                     VerticalAlignment="Center"
                     Margin="0,5,0,5"
-                        IsTabStop="False"
+                    IsTabStop="False"
+                    MouseEnter="Button_MouseEnter" MouseLeave="Button_MouseLeave"
                     Click="ResourceGetterExpression_Click"/>
                 
                 <TextBox x:Name="ResourceGetterBox"
